tests/mir-test/test_out/drop-gen.txt
error: cannot take pointer of temporary value
  --> drop-gen\root.ctl:18:5
   |
18 |     A\{ }.f()
   |     ^^^^^ this value
   |
   = help: storing value in variable should help

error: cannot take pointer of temporary value
  --> drop-gen\root.ctl:25:14
   |
25 |     let a = ^A\{ }
   |              ^^^^^ this value
   |
   = help: storing value in variable should help

info: mir repr of functions:
 fn [] drop_unused() -> ()  { ret var0
    block0() {
        var2 ={}
        drop var2 impl0
        return var0
    }

}

fn [] drop_referenced() -> ()  { ret var0
    block0() {
        var3 ={}
        var2 = &var3
        var0 = f(val2)
        return var0
    }

}

fn [] drop_variable() -> ()  { ret var0
    block0() {
        var2 ={}
        var3 = var2
        access var3
        var4 = &var3
        var0 = f(val4)
        drop var3 impl0
        return var0
    }

}

fn [] drop_refed_variable() -> ()  { ret var0
    block0() {
        var3 ={}
        var2 = &var3
        var4 = var2
        access var4
        var0 = f(val4)
        return var0
    }

}

fn [] move_in_drop() -> ()  { ret var0
    block0() {
        var2 ={}
        var3 = var2
        access var3
        drop var3 impl0
        var3 ={}
        drop var3 impl0
        return var0
    }

}

fn [] f(var0: ^0\A) -> ()  { ret var0
    block0(var2: ^0\A) {
        return var0
    }

}

fn [] drop(var0: ^mut 0\A) -> ()  { ret var0
    block0(var2: ^mut 0\A) {
        return var0
    }

}



